# Jooyoung-Won

./: README.md
Likelion-Django/likelion-13th/: pyproject.toml
Likelion-Django/likelion-13th/accounts/: serializers.py  urls.py  views.py
Likelion-Django/likelion-13th/accounts/migrations/: 0001_initial.py
Likelion-Django/likelion-13th/categories/: models.py
Likelion-Django/likelion-13th/categories/migrations/: 0001_initial.py
Likelion-Django/likelion-13th/comments/: models.py  serializers.py  views.py
Likelion-Django/likelion-13th/comments/migrations/: 0001_initial.py
Likelion-Django/likelion-13th/config/: permissions.py  settings.py  urls.py
Likelion-Django/likelion-13th/posts/: admin.py  models.py  serializers.py  urls.py  views.py
Likelion-Django/likelion-13th/posts/migrations/: 0001_initial.py  0002_image.py
